# deltat

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  V2-DESIGN.md  clippy.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ADAPTERS-RESEARCH.md  ADAPTERS.md  AUTH-AND-PAYMENTS.md  AUTH-ARCHITECTURE.md  DEMO-VISION.md  EFFICIENCY-REVIEW.md  FORMAT.md  OSS-HARDENING-HANDOFF.md  PHASE-0-1-PLAN.md  PRE-PUBLISH.md  PROPOSALS.md  QUALITY-IMPROVEMENTS.md  REQUIREMENTS.md  REVIEW-2026-06-22.md  REVIEW-2026-07-02.md  SESSION-HANDOFF.md
examples/: client.ts
proptest-regressions/engine/: availability.txt
scripts/: check-no-ambient-time.sh
src/: auth.rs  clock.rs  command.rs  lib.rs  limits.rs  main.rs  model.rs  notify.rs  observability.rs  reaper.rs  sql.rs  tenant.rs  tls.rs  wal.rs  wire.rs
src/engine/: availability.rs  conflict.rs  error.rs  mod.rs  mutations.rs  queries.rs  store.rs  tests.rs  verify.rs
tests/: listen_notify.rs
