[package]
name = "deltat"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "A time-first scheduling database: availability, conflicts, capacity, holds, and buffers as collision detection on the Unix-time number line. Speaks the PostgreSQL wire protocol."
repository = "https://github.com/open-deltat/deltat"
homepage = "https://delt.at"
readme = "README.md"
keywords = ["scheduling", "availability", "booking", "calendar", "database"]
categories = ["database-implementations", "date-and-time"]

[dependencies]
pgwire = "0.37"
sqlparser = { version = "0.59", features = ["visitor"] }
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
ulid = { version = "1", features = ["serde"] }
crc32fast = "1"
serde_json = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
rustls-pemfile = "2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

[dev-dependencies]
tokio-test = "0.4"
tokio-postgres = "0.7"
proptest = "1"

[[bench]]
name = "stress"
harness = false

# Surface arithmetic overflow as a panic (not a silent wrap) even in release, so a slipped-through
# out-of-range value fails loudly instead of corrupting a span. Boundary validation + saturating
# arithmetic keep this from firing on the hot path.
[profile.release]
overflow-checks = true
